fix: fix login feature and improve user cud functions
