# project-1/Asgun-alt/app/routes/router.go
@@ -3,8 +3,10 @@ package routes
 import (
 	"net/http"
 
-	_ "github.com/gnumi34/golang-mentoring/tree/main/project-1/Asgun-alt/docs"
-	"github.com/gnumi34/golang-mentoring/tree/main/project-1/Asgun-alt/pkg/user/controllers/users"
+	_ "golang-mentoring/project-1/Asgun-alt/docs"
+	customMiddleware "golang-mentoring/project-1/Asgun-alt/pkg/middleware"
+	users "golang-mentoring/project-1/Asgun-alt/pkg/users/controllers/http"
+
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -12,18 +14,18 @@ import (
 
 type RouteControllerList struct {
 	UsersController users.UserController
-	JWTConfig       middleware.JWTConfig
 }
 
 func (controller RouteControllerList) RoutesUser(e *echo.Echo) {
 	e.Pre(middleware.RemoveTrailingSlash())
-	jwtMiddleware := middleware.JWTWithConfig(controller.JWTConfig)
+
+	JWTConfig := customMiddleware.NewJWTMiddlewareConfig()
+	jwtMiddleware := middleware.JWTWithConfig(JWTConfig)
 
 	e.GET("/", func(c echo.Context) error {
 		return c.String(http.StatusOK, "Hello the program is functioning properly, welcome to the user routes.")
 	})
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
-	e.POST("/login", controller.UsersController.Login)
 
 	e.POST("/users", controller.UsersController.AddUser)
 	e.POST("/users/get-user", controller.UsersController.GetUser, jwtMiddleware)
