# project-1/Asgun-alt/docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/login": {
+        "/api/auth/login": {
             "post": {
                 "description": "If user is exists in the database, Generate and RETURN user token.",
                 "consumes": [
@@ -37,7 +37,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.LoginUser"
+                            "$ref": "#/definitions/auth.LoginUserRequest"
                         }
                     }
                 ],
@@ -58,8 +58,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJVc2VySUQiOiJkMTk3YzY1Ny0zMDY1LTQ0MjYtYmY4ZS05YmJhYWYwYjY5MDciLCJleHAiOjE2NjA4NzQ3MjR9.FV-RV_55zOMO4qD1vjmY0m1ZmeRsvDfMchlbqXjcpkc",
-                        "description": "Insert your access token",
+                        "description": "Insert your access token 'Bearer your_token'",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -86,6 +85,13 @@
                 ],
                 "summary": "Update User",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Insert your access token 'Bearer your_token'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Update User",
                         "name": "User",
@@ -114,7 +120,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Add new user"
+                    "Add User"
                 ],
                 "summary": "Add user",
                 "parameters": [
@@ -148,10 +154,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "GetUser"
+                    "Get User"
                 ],
                 "summary": "Show an account",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Insert your access token 'Bearer your_token'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "validate user",
                         "name": "User",
@@ -185,6 +198,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Insert your access token 'Bearer your_token'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "delete user",
                         "name": "id",
                         "in": "path",
@@ -200,6 +220,17 @@
         }
     },
     "definitions": {
+        "auth.LoginUserRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "gorm.DeletedAt": {
             "type": "object",
             "properties": {
@@ -248,17 +279,6 @@
                 }
             }
         },
-        "request.LoginUser": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "request.UpdateUser": {
             "type": "object",
             "properties": {
@@ -266,6 +286,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "old_password": {
                     "type": "string"
                 },
                 "password_1": {
@@ -282,25 +305,22 @@
         "users.UsersDomain": {
             "type": "object",
             "properties": {
-                "created_At": {
+                "createdAt": {
                     "type": "string"
                 },
-                "deleted_At": {
+                "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "email": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "password": {
                     "type": "string"
                 },
-                "token": {
-                    "type": "string"
-                },
-                "updated_At": {
+                "updatedAt": {
                     "type": "string"
                 },
                 "username": {
